# A2A_MCP_demo

./: .env.example  .gitignore  README.md  architecture.html  gradio_app.py  pyproject.toml  run_demo.py
activity_agent/: agent.py  mcp_server.py
common/: a2a_protocol.py  agent_launcher.py  env.py  mcp_client.py  tracing.py
notebook/: a2a_prototype.ipynb
weather_agent/: agent.py  mcp_server.py
